# Speaker-Linkability

./: .gitignore  README.md  compute_linkability.py  generate_matrices.py  launch_matrix_gen.sh  oar_launch_matrix_gen.sh  pyproject.toml  requirements.txt
config/: ecapa_anon.yaml  ecapa_orig.yaml  libri_ECAPA_B3.yaml  libri_ECAPA_B5.yaml  libri_ECAPA_orig.yaml  libri_SpeechBrainECAPA_B3.yaml  libri_SpeechBrainECAPA_B5.yaml  libri_SpeechBrainECAPA_orig.yaml  libri_resnet_B3.yaml  libri_resnet_B3_V2.yaml  libri_resnet_B5.yaml  libri_resnet_orig.yaml  resnet_anon.yaml  resnet_orig.yaml
embedding/: base.py
matrix/: base.py  cv11-A_enroll_ids.pkl  cv11-B_trial_ids.pkl
plot/: compute_speaker_scores.py  plot_L_intersections.py  plot_anonymizer_intersections.py  plot_architecture_intersections.py  plot_linkability.py  plot_mean_jaccard.py
score_analysis/: get_kde.py  get_outliers_speaker.py  get_scores_dic.py  get_worst_spk_metadata.py  get_worst_spk_utt.py
score_analysis/worst_spk_analysis/: worst_spk_data.pkl  worst_spk_overall.txt  worst_spk_utt.csv
scores/: __init__.py  base.py  store_score_per_speaker.py  visualization_tools.py
utils/: __init__.py  enroll_ids_ECAPA_B3  enroll_ids_ECAPA_B5  enroll_ids_resnet_B3  get_avg_embs.py  get_selected_trial_utterances.py  get_trials_spk2utt.py  logger.py  trial_ids_ECAPA_B3  trial_ids_ECAPA_B5  trial_ids_resnet_B3
