[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Anonymization_Linkability"
version = "1.0.0"
description = "Implementation of linkability metric for speech anonymization evaluation framework"
authors = [
    {name = "", email = ""}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
